--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-multi-carousel": "^2.8.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
     "recoil": "^0.7.7",
