--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "fitgrocery",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.20.2"
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.4",
     "@testing-library/jest-dom": "^5.16.5",
