--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
+    "ignorePatterns": [
+      "*.js"
+    ],
     "extends": [
       "react-app",
       "react-app/jest"
